 - [web] fixed saving value of receipt action for main IMAP account
 - [web] fixed search results in Calendar module when targeting all events
 - [web] properly encode URL of cards from exteral sources
 - [core] honor IMAPLoginFieldName also when setting IMAP ACLs
 - [core] honor groups when setting IMAP ACLs
 - [core] honor "any authenticated user" when setting IMAP ACLs

4.0.8 (2019-07-19)
------------------

Enhancements
 - [web] show calendar names of subscriptions in events blocks
 - [web] show hints for mail vacation options (#4462)
 - [web] allow to fetch unseen count of all mailboxes (#522, #2776, #4276)
 - [web] add rel="noopener" to external links (#4764)
 - [web] add Indonesian (id) translation
 - [web] updated Angular Material to version 1.1.19
 - [web] replaced bower packages by npm packages
 - [web] restored mail threads (#3478, #4616, #4735)
 - [web] reflect attendee type with generic icon (person/group/resource)
 - [web] reduce usage of calendar color in dialogs

Bug fixes
 - [web] fixed wrong translation of custom calendar categories
 - [web] fixed wrong colors assigned to default calendar categories
 - [web] lowered size of headings on small screens
 - [web] fixed scrolling in calendars list on Android
 - [web] keep center list of Calendar module visible on small screens
 - [web] check for duplicate name only if address book name is changed
 - [web] improved detection of URLs and email addresses in text mail parts
 - [web] fixed page reload with external IMAP account (#4709)
 - [web] constrained absolute-positioned child elements of HTML mail parts
 - [web] fixed useless scrolling when deleting a message
 - [web] don't hide compose button if messages list is visible
 - [web] fixed next/previous slots with external attendees
 - [web] fixed restoration of sub mailbox when reloading page
 - [web] use matching address of attendee (#4473)
 - [core] allow super users to modify any event (#4216)
 - [core] correctly handle the full cert chain in S/MIME