@@ -1100,6 +1100,12 @@ firstInstanceCalendarDateRange: (NGCalendarDateRange *) fir
       endDate = [(iCalToDo*) component due];
     }
 
+  if (![master startDate])
+    {
+      [self errorWithFormat: @"ignored component with no DTSTART"];
+      return;
+    }
+
   delta = [masterEndDate timeIntervalSinceDate: [master startDate]];
   recurrenceIdRange = [NGCalendarDateRange calendarDateRangeWithStartDate: recurrenceId
 								  endDate: [recurrenceId dateByAddingYears:0 months:0 days:0 hours:0 minutes:0 seconds: delta]];
